--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@ DEBUGBAR_ENABLED=true
 DEBUGBAR_EDITOR=
 APP_URL=http://localhost
 ASSET_URL=null
-APP_KEY=
+APP_KEY=base64:4q+xwe9pY9z9hktG1i2b0DeGuoY7C7cMdDLJlArOPac=
 
 # audio
 AUDIO_DISK_DEFAULT=audios_local
