--- a/.env
+++ b/.env
@@ -51,14 +51,14 @@ CACHE_PREFIX=animethemes
 
 # database
 DB_CONNECTION=mysql_prod
-DATABASE_URL=
-DB_HOST_READ=127.0.0.1
-DB_HOST_WRITE=127.0.0.1
+DATABASE_URL=mysql://if0_38063719:Ade5oyin@sql203.infinityfree.com:3306/if0_38063719_themes
+DB_HOST_READ=	sql203.infinityfree.com
+DB_HOST_WRITE=	sql203.infinityfree.com
 DB_STICKY=false
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=if0_38063719_themes
+DB_USERNAME=if0_38063719
+DB_PASSWORD=Ade5oyin
 DB_SOCKET=
 MYSQL_ATTR_SSL_CA=null
 
@@ -83,7 +83,7 @@ REDIS_CACHE_DB=1
 # dump
 DUMP_DISK=dumps_local
 DUMP_DISK_ROOT=
-DUMP_URL=http://localhost
+DUMP_URL=https://anime-sql.rf.gd
 DUMP_PATH=/dump
 
 # elastic client
