--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,35 +1,35 @@
-name: Tests
+name: Laravel Migrate and Seed
 
-on: push
+on:
+  push:
+    branches: [ main ]
+  workflow_dispatch:
 
 jobs:
-  test:
-
-    runs-on: ubuntu-22.04
+  migrate-seed:
+    runs-on: ubuntu-latest
 
     steps:
-    - uses: shivammathur/setup-php@v2
-      with:
-        php-version: '8.4.1'
-        tools: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, phpunit
-    - uses: actions/checkout@v3
-    - name: Copy .env
-      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-    - name: Install Dependencies
-      run: |
-        composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
-    - name: Generate key
-      run: php artisan key:generate
-    - name: Directory Permissions
-      run: chmod -R 777 storage bootstrap/cache
-    - name: Create Database
-      run: |
-        mkdir -p database
-        touch database/database.sqlite
-    - name: Execute tests (Unit and Feature tests) via PHPUnit
-      env:
-        DB_CONNECTION: sqlite
-        DB_DATABASE: database/database.sqlite
-      run: |
-        php artisan optimize:clear
-        php artisan test
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      - name: Set up PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: 8.2
+
+      - name: Install Dependencies
+        run: |
+          composer install
+          cp .env.example .env
+          php artisan key:generate
+
+      - name: Inject Database URL
+        run: |
+          echo "DATABASE_URL=mysql://if0_38063719:Ade5oyin@sql203.infinityfree.com:3306/if0_38063719_themes" >> .env
+
+      - name: Run Migrations
+        run: php artisan migrate --force
+
+      - name: Seed Database
+        run: php artisan db:seed --class=DatabaseSeeder
