--- a/.env
+++ b/.env
@@ -16,8 +16,8 @@ APP_KEY=base64:4q+xwe9pY9z9hktG1i2b0DeGuoY7C7cMdDLJlArOPac=
 AUDIO_DISK_DEFAULT=audios_local
 AUDIO_DISKS=audios_local
 AUDIO_DISK_ROOT=
-AUDIO_PATH=/audio
-AUDIO_URL=
+AUDIO_PATH=a.animethemes.moe/audio
+AUDIO_URL=a.animethemes.moe
 AUDIO_STREAMING_METHOD=response
 AUDIO_NGINX_REDIRECT=
 
@@ -83,7 +83,7 @@ REDIS_CACHE_DB=1
 # dump
 DUMP_DISK=dumps_local
 DUMP_DISK_ROOT=
-DUMP_URL=https://anime-sql.rf.gd
+DUMP_URL=
 DUMP_PATH=/dump
 
 # elastic client
@@ -282,7 +282,7 @@ VIDEO_DISK_DEFAULT=videos_local
 VIDEO_DISKS=videos_local
 VIDEO_DISK_ROOT=
 VIDEO_PATH=/video
-VIDEO_URL=
+VIDEO_URL=v.animethemes.moe
 VIDEO_STREAMING_METHOD=response
 VIDEO_NGINX_REDIRECT=
 
